--- a/vicon_receiver/CMakeLists.txt
+++ b/vicon_receiver/CMakeLists.txt
@@ -15,6 +15,10 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic -g)
 endif()
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release")
+endif()
+
 include_directories(
   include
   ${Boost_INCLUDE_DIRS}
